compiler/typ/tests/fixtures/diagnostics/0066_core_function_application_mismatch_06.ml
let consume_zeta (x : bool) : bool = x
let _ = consume_zeta 0
